削除処理の実装

--- a/app/views/todo/Add.scala.html
+++ b/app/views/todo/Add.scala.html
@@ -7,16 +7,16 @@
 @import helper._
 
 @import forms.TodoAddData
-@import helpers.TodoFormHelper
+@import presenters.TodoFormPresenter
 
-@(vv: model.ViewValueCommon, form: Form[TodoAddData], fromHelper: TodoFormHelper)(implicit request: RequestHeader, messages: Messages)
+@(vv: model.ViewValueCommon, form: Form[TodoAddData], formPresenter: TodoFormPresenter)(implicit request: RequestHeader, messages: Messages)
 
 @common.Default(vv){
   @helper.form(action = routes.TodoController.create) {
     @CSRF.formField 
     @helper.inputText(form("title"))
     @helper.inputText(form("body"))
-    @helper.select(form("categoryId"), options = fromHelper.categoryOptions)
+    @helper.select(form("categoryId"), options = formPresenter.categoryOptions)
     <input type="submit" value="作成">
     <a href="@routes.TodoController.index">戻る</a>
   }
