--- a/app/views/common/Default.scala.html
+++ b/app/views/common/Default.scala.html
@@ -25,6 +25,10 @@
       <h1>@vv.title</h1>
       @content
     </main>
+    <footer>
+      <a href="@routes.HomeController.index">ホーム</a>
+    </footer>
+  
     @for(js <- vv.jsSrc) {
       <script src="@{routes.Assets.versioned("javascripts/" + js)}" type="text/javascript"></script>
     }
