--- a/app/views/todoCategory/Index.scala.html
+++ b/app/views/todoCategory/Index.scala.html
@@ -3,7 +3,35 @@
  * to do sample project
  *
  *@
+ 
+@import helper._
+@import presenters.TodoCategoryListPresenter
 
-@(vv: model.ViewValueCommon)
+@(vv: model.ViewValueCommon, presenter: TodoCategoryListPresenter)(implicit request: RequestHeader, messages: Messages)
 @common.Default(vv){
+  <button>
+    <a href="@routes.TodoCategoryController.add">作成</a>
+  </button>
+  <ul class="todo-category-list">
+  @for(item <- presenter.list) {
+    <li>
+      <div class="todo-category-card">
+        <div class="todo-category-card__content">
+          <div class="todo-category-card__name">@item.name</div>
+        </div>
+        <div class="todo-category-card__buttons">
+          <button class="todo-category-card__buttons__edit">
+            <a href="@routes.TodoCategoryController.edit(item.id)">編集</a>
+          </button>
+          <div class="todo-category-card__buttons__remove">
+            @helper.form(action = routes.TodoCategoryController.remove(item.id)) {
+              @CSRF.formField
+              <input type="submit" value="削除">
+            }
+          </div>
+        </div>
+      </div>
+    </li> 
+  }
+  </ul>
 }
