--- a/app/views/todoCategory/Edit.scala.html
+++ b/app/views/todoCategory/Edit.scala.html
@@ -4,8 +4,11 @@
  *
  *@
 
-@(vv: model.ViewValueCommon)
+@import helper._
+@import forms.TodoCategoryData
+
+@(vv: model.ViewValueCommon, form: Form[TodoCategoryData], id: Long)(implicit request: RequestHeader, messages: Messages)
 
 @common.Default(vv){
-  
+  @views.html.todoCategory.Form.render(form, Option(id), request, messages)
 }
