--- a/app/views/common/Default.scala.html
+++ b/app/views/common/Default.scala.html
@@ -25,8 +25,10 @@
       <h1>@vv.title</h1>
       @content
     </main>
-    <footer>
-      <a href="@routes.HomeController.index">ホーム</a>
+    <footer class="footer">
+      <div class="footer__content">
+        <a href="@routes.HomeController.index">ホーム</a>
+      </div>
     </footer>
   
     @for(js <- vv.jsSrc) {
