--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,9 +2,16 @@
  * to-do list
  */
 
+html {
+  height: 100%;
+}
+
 body {
   margin:   0;
   padding:  0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -25,7 +32,19 @@ body {
   font-weight:       bold;
 }
 
+.footer {
+  background-color: lightgrey;
+  width:            100%;
+  padding:          12px 0px;
+}
+
+.footer .footer__content {
+  width:      1080px;
+  margin:     auto;
+}
+
 .main {
+  flex:       1;
   width:      980px;
   margin:     100px auto;
   padding:    100px;
