--- a/app/views/todo/Add.scala.html
+++ b/app/views/todo/Add.scala.html
@@ -10,14 +10,14 @@
 @import presenters.TodoFormPresenter
 @import helpers.TodoHelper
 
-@(vv: model.ViewValueCommon, form: Form[TodoAddData], formPresenter: TodoFormPresenter)(implicit request: RequestHeader, messages: Messages)
+@(vv: model.ViewValueTodoAddForm, form: Form[TodoAddData])(implicit request: RequestHeader, messages: Messages)
 
-@common.Default(vv){
+@common.Default(vv.home){
   @helper.form(action = routes.TodoController.create) {
     @CSRF.formField 
     @helper.inputText(form("title"))
     @helper.textarea(form("body"))
-    @helper.select(form("categoryId"), options = TodoHelper.categoryOptions(formPresenter.categories))
+    @helper.select(form("categoryId"), options = TodoHelper.categoryOptions(vv.categories))
     <input type="submit" value="作成">
     <button><a href="@routes.TodoController.index">戻る</a></button>
   }
