--- a/app/views/todo/Edit.scala.html
+++ b/app/views/todo/Edit.scala.html
@@ -10,15 +10,15 @@
 @import presenters.TodoFormPresenter
 @import helpers.TodoHelper
 
-@(vv: model.ViewValueCommon, form: Form[TodoEditData], formPresenter: TodoFormPresenter, todoId: Long)(implicit request: RequestHeader, messages: Messages)
+@(vv: model.ViewValueTodoEditForm, form: Form[TodoEditData])(implicit request: RequestHeader, messages: Messages)
 
-@common.Default(vv){
-  @helper.form(action = routes.TodoController.update(todoId)) {
+@common.Default(vv.home){
+  @helper.form(action = routes.TodoController.update(vv.id)) {
     @CSRF.formField 
     @helper.inputText(form("title"))
     @helper.textarea(form("body"))
     @helper.select(form("state"), options = TodoHelper.stateOptions)
-    @helper.select(form("categoryId"), options = TodoHelper.categoryOptions(formPresenter.categories))
+    @helper.select(form("categoryId"), options = TodoHelper.categoryOptions(vv.categories))
     <input type="submit" value="更新">
     <a href="@routes.TodoController.index">戻る</a>
   }
