--- a/app/views/todoCategory/Index.scala.html
+++ b/app/views/todoCategory/Index.scala.html
@@ -5,15 +5,14 @@
  *@
  
 @import helper._
-@import presenters.TodoCategoryListPresenter
 
-@(vv: model.ViewValueCommon, presenter: TodoCategoryListPresenter)(implicit request: RequestHeader, messages: Messages)
-@common.Default(vv){
+@(vv: model.ViewValueTodoCategoryList)(implicit request: RequestHeader, messages: Messages)
+@common.Default(vv.home){
   <button>
     <a href="@routes.TodoCategoryController.add">作成</a>
   </button>
   <ul class="todo-category-list">
-  @for(item <- presenter.list) {
+  @for(item <- vv.items) {
     <li>
       <div class="todo-category-card">
         <div class="todo-category-card__content">
