Todo一覧のデザイン調整

--- a/app/views/todo/Index.scala.html
+++ b/app/views/todo/Index.scala.html
@@ -21,9 +21,9 @@
       <div class="todo-card">
         <div class="todo-card__content">
           <div class="todo-card__head">
-            <div class="todo-card__title">@item.title</div>
-            <div class="todo-card__category">@item.categoryName</div>
-            <div class="todo-card__state @TodoHelper.stateStyle(item.state)">@item.state.name</div>
+            <p class="todo-card__title">@item.title</p>
+            <p class="todo-card__category">@item.categoryName</p>
+            <p class="todo-card__state @TodoHelper.stateStyle(item.state)">@item.state.name</p>
           </div>
           <p class="todo-card__body">@item.body</p>
         </div>
